# atlas-perception

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_webcam_mapping.py
.github/workflows/: ci.yml
configs/: default.yaml  gazebo_demo.yaml  gazebo_rtabmap_demo.yaml  isaac_demo.yaml  tum_demo.yaml  tum_main_eval.yaml  turtlebot3_gazebo_rtabmap.yaml  webcam_mapping.yaml
data/: README.md
data/outputs/tum_demo/: frame_cloud.ply
docs/: architecture.md  index.md  isaac_sim_setup.md  pipeline.md  ros_topics.md  sample_run.md  ubuntu_gazebo_setup.md
launch/: atlas_perception.launch.py  isaac_atlas.launch.py  sim_demo.launch.py
src/: __init__.py  main.py
src/depth/: __init__.py  estimator.py  metrics.py  models.py  visualize.py
src/io/: __init__.py  base.py  camera.py  ros_image.py  tum_rgbd.py  types.py  video.py
src/mapping/: __init__.py  fusion.py  occupancy.py  pointcloud.py
src/ros2/: __init__.py  nodes.py  publishers.py  subscribers.py  transforms.py
src/semantics/: __init__.py  models.py  segmenter.py
src/sim/: __init__.py  common.py  factory.py  gazebo_bridge.py  isaac_bridge.py
src/slam/: __init__.py  loop_closure.py  metrics.py  odometry.py  pose_graph.py  trajectory.py  wrapper.py
src/utils/: config.py  demo_video.py  geometry.py  perf.py
tests/: conftest.py  test_config.py  test_demo_tools.py  test_demo_video.py  test_depth.py  test_depth_metrics.py  test_geometry.py  test_io_camera.py  test_isaac_demo.py  test_mapping.py  test_ros2_bridge.py  test_ros2_pose.py  test_ros_image.py  test_semantics.py  test_sim_bridge.py  test_slam.py  test_trajectory_metrics.py  test_transforms.py
tools/: evaluate_depth.py  evaluate_trajectory.py  export_demo_gif.py  generate_tum_dataset_showcase.py  run_demo.py  run_isaac_demo.py  run_tum_artifact.py  run_webcam_mapping.py
