[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-perception"
version = "1.0.0"
description = "Camera-based robot perception stack for depth, localization, and map-building."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "PyYAML>=6.0",
  "open3d>=0.18",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "ruff>=0.9",
]
semantics = [
  "ultralytics>=8.3",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.black]
line-length = 120
target-version = ["py310"]
extend-exclude = '''
(
  ^/\.cache/
  | ^/\.codex_eval_tmp/
  | ^/\.codex_tmp_test/
  | ^/\.codex_traj_tmp/
  | ^/\.pytest_cache/
  | ^/\.pytest_tmp/
  | ^/\.pytest_tmp_demo/
  | ^/\.pytest_tmp_local/
  | ^/test-cache/
  | ^/test-tmp/
  | ^/pytest-cache-files-.*/
  | ^/tmp8m5z8nm2/
  | ^/tmp9_rtw1mw/
)
'''

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  ".cache",
  ".codex_eval_tmp",
  ".codex_tmp_test",
  ".codex_traj_tmp",
  ".pytest_cache",
  ".pytest_tmp",
  ".pytest_tmp_demo",
  ".pytest_tmp_local",
  "test-cache",
  "test-tmp",
  "pytest-cache-files-azh8d4t9",
  "pytest-cache-files-e5r01ivp",
  "pytest-cache-files-moqwf7im",
  "pytest-cache-files-xpur572f",
  "tmp8m5z8nm2",
  "tmp9_rtw1mw",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["E402"]
